# neoasmview

./: CMakeLists.txt  README.md
include/: asm_instance.h
lua/neoasmview/: build.lua  commands.lua  init.lua  server.lua
lua/vimasm/: commands.lua  init.lua
src/: asm-filter  asm_filter.c  asm_instance.c  asm_server.c  test.c
tests/: bar.c  foobar.c  foobar.h
tests/linked_lib/: CMakeLists.txt  lib.c  lib.h
tests/simple_exec/: CMakeLists.txt  foo.c  foobar.c
tests/simple_lib/: CMakeLists.txt  api.c  lib.c
tools/: CMakeLists.txt  bear_cargo.c
